Allow null values in SLI targets. Refactored Product Group def in swagger.
